# ssisdump

./: CMakeLists.txt
.github/workflows/: build-linux.yml  build-windows.yml
src/: ssisdump.cpp
